--- a/view/adminhtml/web/template/content-type/column/full-height/preview.html
+++ b/view/adminhtml/web/template/content-type/column/full-height/preview.html
@@ -7,7 +7,7 @@
 
 <div class="pagebuilder-affordance-column pagebuilder-content-type type-container pagebuilder-column children-min-height pagebuilder-content-type-affordance"
      attr="data.main.attributes"
-     ko-style="getStyle(data.main, ['marginTop', 'marginBottom', 'marginLeft', 'marginRight', 'flexBasis', 'gap', 'alignSelf', 'minHeight'])"
+     ko-style="getStyle(data.main, ['marginTop', 'marginBottom', 'marginLeft', 'marginRight', 'width', 'flexBasis', 'gap', 'alignSelf', 'minHeight'])"
      event="{ mouseover: onMouseOver, mouseout: onMouseOut }, mouseoverBubble: false"
      css="Object.assign(data.main.css(), {'empty-container': $parent.children().length == 0})"
      afterRender="initColumn">
