--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -11,6 +11,14 @@
         &,
         > .element-children {
             gap: inherit;
+
+            .mobile-viewport & {
+                .lib-vendor-prefix-flex-direction(column);
+            }
+        }
+
+        .pagebuilder-affordance-column {
+            width: 100%;
         }
     }
 }
